--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | Home :: W3layouts</title>
+    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | Home ::</title>
    
     <link href="//fonts.googleapis.com/css2?family=Spartan:wght@300;400;600;700&display=swap" rel="stylesheet">
    
@@ -81,7 +81,7 @@
     <!--/header-->
     <div class="section-mid-gap"></div>
     <!--/Banner-Start-->
-    <section class="bannerw3l-hnyv">
+    <section class="bannerl-hnyv">
         <div class="slider">
             <!-- slides -->
             <div class="slider__slides">
@@ -138,34 +138,34 @@
                 <div class="slider__control-line"></div>
             </div>
         </div>
-        <div class="bannerw3l-layer"></div>
+        <div class="bannerl-layer"></div>
     </section>
     <!--//Banner-End-->
     <!--/social-media-->
-    <div class="social-w3l-media-sec">
-        <div class="w3l-social-imf-left">
+    <div class="social-l-media-sec">
+        <div class="l-social-imf-left">
 
         </div>
         <div class="social-column-grids">
-            <div class="w3l-social-gd">
+            <div class="wl-social-gd">
                 <a href=" #" target="_blank" class="facebook">
                     <span class="fab fa-facebook-f mr-2"></span>
                     <span class="social-text">Facebook</span>
                 </a>
             </div>
-            <div class="w3l-social-gd">
+            <div class="l-social-gd">
                 <a href="#" target="_blank" class="twitter">
                     <span class="fab fa-twitter mr-2"></span>
                     <span class="social-text">Twitter</span>
                 </a>
             </div>
-            <div class="w3l-social-gd">
+            <div class="l-social-gd">
                 <a href=" #" class="dribble">
                     <span class="fab fa-dribbble mr-2"></span>
                     <span class="social-text">Dribbble</span>
                 </a>
             </div>
-            <div class="w3l-social-gd">
+            <div class="l-social-gd">
                 <a href=" #" target="_blank" class="instagram">
                     <span class="fab fa-instagram mr-2"></span>
                     <span class="social-text">Instagram</span>
@@ -173,7 +173,7 @@
             </div>
           
         </div>
-        <div class="w3l-social-button-right">
+        <div class="l-social-button-right">
             <a href=" #" class="btn-explore">
                 Explore Now
             </a>
@@ -181,16 +181,16 @@
     </div>
     <!--//social-media-->
     <!--/about-home-->
-    <section class="w3l-servicesblock py-5" id="about">
+    <section class="l-servicesblock py-5" id="about">
         <div class="container py-lg-5 py-md-4 py-2">
             <div class="row">
                 <div class="col-lg-4 mb-lg-0 mb-5 pr-lg-5">
                     <img src="assets/images/ab.jpg" alt="" class="img-fluid radius-image">
                 </div>
                 <div class="col-lg-8 about-right-faq align-self">
-                    <h6 class="title-subw3hny">About Us</h6>
-                    <h3 class="title-w3l mb-4">We have 10+ years of <span class="thin">experience.</span></h3>
-                    <div class="two-grids-hmew3">
+                    <h6 class="title-subhny">About Us</h6>
+                    <h3 class="title-l mb-4">We have 10+ years of <span class="thin">experience.</span></h3>
+                    <div class="two-grids-hme">
                         <p class="mt-3">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula.
                             Semper at tempufddfel. Lorem ipsum dolor.
                         </p>
@@ -199,7 +199,7 @@
                         </p>
                     </div>
 
-                    <div class="three-grids-hmew3 mt-5 pt-lg-3">
+                    <div class="three-grids-hme mt-5 pt-lg-3">
                         <div class="three-grid-1 text-center">
                             <img src="assets/images/s1.jpg" alt="" class="img-fluid radius-image">
                             <h4>Watches</h4>
@@ -226,19 +226,19 @@
         </div>
     </section>
     <!--//about-home-->
-    <!--/w3l-passion-mid-sec-->
-    <section class="w3l-passion-mid-sec py-5">
+    <!--/l-passion-mid-sec-->
+    <section class="l-passion-mid-sec py-5">
         <div class="container py-md-5 py-3">
             <div class="container">
-                <div class="row w3l-passion-mid-grids">
-                    <div class="col-lg-5 w3hny-passion-item">
+                <div class="row l-passion-mid-grids">
+                    <div class="col-lg-5 hny-passion-item">
                         <div class="passion-grid-item-pic">
                             <img src="assets/images/about2.jpg" alt="" class="img-fluid radius-image">
                         </div>
                     </div>
                     <div class="col-lg-7 passion-grid-item-info pl-lg-5 mt-lg-0 mt-5">
-                        <h6 class="title-subw3hny">Summer Collection</h6>
-                        <h3 class="title-w3l mb-4">Accessories </br>Collections 2021</h3>
+                        <h6 class="title-subhny">Summer Collection</h6>
+                        <h3 class="title-l mb-4">Accessories </br>Collections 2021</h3>
                         <p class="mt-3 pr-lg-5">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in
                             ligula. Semper at tempufddfel.Lorem ipsum dolor sit, amet consectetur elit. Earum mollitia
                             cum ex ipsam autem!earum sequi amet.Pellen tesque libero ut justo ipsam.</p>
@@ -246,14 +246,14 @@
                     </div>
 
                     <div class="col-lg-7 passion-grid-item-info pr-lg-5 mt-5 pt-lg-5">
-                        <h6 class="title-subw3hny">Summer Collection</h6>
-                        <h3 class="title-w3l mb-4">Women </br>Cosmetics 2021</h3>
+                        <h6 class="title-subhny">Summer Collection</h6>
+                        <h3 class="title-l mb-4">Women </br>Cosmetics 2021</h3>
                         <p class="mt-3 pr-lg-5">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in
                             ligula. Semper at tempufddfel.Lorem ipsum dolor sit, amet consectetur elit. Earum mollitia
                             cum ex ipsam autem!earum sequi amet.Pellen tesque libero ut justo ipsam.</p>
                         <a href="#" class="btn btn-primary btn-style mt-lg-5 mt-4">Shop now</a>
                     </div>
-                    <div class="col-lg-5 w3hny-passion-item mt-5 pt-lg-5">
+                    <div class="col-lg-5 hny-passion-item mt-5 pt-lg-5">
                         <div class="passion-grid-item-pic">
                             <img src="assets/images/about1.jpg" alt="" class="img-fluid radius-image">
                         </div>
@@ -263,11 +263,11 @@
         </div>
         </div>
     </section>
-    <!--//w3l-passion-mid-sec-->
+    <!--//l-passion-mid-sec-->
 
-    <section class="w3l-stats-sec py-5">
+    <section class="l-stats-sec py-5">
         <div class="container py-md-3">
-            <div class="row w3l-stats-section stats-con">
+            <div class="row l-stats-section stats-con">
                 <div class="col-lg-3 col-6 stats_info counter_grid">
                   <p class="counter">1200 </p>
                   <h3>Branches</h3>
@@ -287,10 +287,10 @@
               </div>
         </div>
     </section>
-    <!--/w3l-courses-->
+    <!--/l-courses-->
    
     <!--/testimonials-->
-    <section class="w3l-clients-1" id="testimonials">
+    <section class="l-clients-1" id="testimonials">
         <!--/cusrtomer-layout-->
         <div class="cusrtomer-layout py-5">
             <div class="container py-lg-5 py-md-4 py-2">
@@ -332,7 +332,7 @@
         <!--//cusrtomer-layout-->
     </section>
     <!-- //testimonials -->
-    <section class="w3l-footer-29-main">
+    <section class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-lg-4 py-sm-3">
                 <div class="row footer-top-29">
@@ -346,16 +346,16 @@
                         <a href="contact.html" class="btn btn-style btn-primary mt-2">Contact Us</a>
                     </div>
                     <div class="col-lg-4 footer-list-29 footer-3 mt-lg-0 mt-5 pr-lg-5">
-                        <h6 class="footer-title-29">Quick <span class="thinw3">Links</span></h6>
-                        <div class="footer-listw3-grids">
-                            <ul class="footer-listw3">
+                        <h6 class="footer-title-29">Quick <span class="thin">Links</span></h6>
+                        <div class="footer-list-grids">
+                            <ul class="footer-list">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="blog.html">Blogs</a></li>
                                 <li><a href="contact.html">Contact</a></li>
 
                             </ul>
-                            <ul class="footer-listw3">
+                            <ul class="footer-list">
                                 <li><a href="#privacy">Privacy Policy</a></li>
                                 <li><a href="#term">Terms of use</a></li>
                                 <li><a href="#sales">Sales and Refunds</a></li>
@@ -365,7 +365,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 footer-list-29 footer-4 mt-lg-0 mt-5">
-                        <h6 class="footer-title-29">Keep <span class="thinw3">Connected</span></h6>
+                        <h6 class="footer-title-29">Keep <span class="thin">Connected</span></h6>
                         <p>Get Updates By Subscribe Our Weekly Newsletter</p>
 
                         <form action="#" class="subscribe" method="post">
@@ -387,8 +387,8 @@
         </div>
         <div class="bottom-copies text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved | Designed by <a
-                        href="https://w3layouts.com">VijayaSriKondiparthi-20X41A0595</a></p>
+                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved Vijaya Sri 20X41A0595 | Developed for FRT project <a
+                        </a></p>
             </div>
         </div>
 
@@ -479,7 +479,7 @@
     <script src="assets/js/jquery.chocolat.js"></script>
     <script type="text/javascript ">
         $(function () {
-            $('.w3_agile_portfolio_grid a').Chocolat();
+            $('._agile_portfolio_grid a').Chocolat();
         });
     </script>
     <!-- /js for portfolio lightbox -->
