--- a/about.html
+++ b/about.html
@@ -1,8 +1,5 @@
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en">
 
@@ -10,7 +7,7 @@ Author URL: http://w3layouts.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | About :: W3layouts </title>
+    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | About ::  </title>
     <!-- google fonts -->
     <link href="//fonts.googleapis.com/css2?family=Spartan:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Template CSS -->
@@ -86,7 +83,7 @@ Author URL: http://w3layouts.com
     <div class="section-mid-gap"></div>
     <!--/Banner-inner-pages-->
     <div class="inner-banner">
-        <section class="w3l-breadcrumb text-left">
+        <section class="l-breadcrumb text-left">
           <div class="container">
             <ul class="breadcrumbs-custom-path">
               <li><a href="index.html">Home</a></li>
@@ -97,18 +94,18 @@ Author URL: http://w3layouts.com
       </div>
     <!--//Banner-inner-pages-->
      <!--/about-inner-->
-     <section class="w3l-aboutin py-5" id="ab">
+     <section class="l-aboutin py-5" id="ab">
         <div class="container py-lg-5 py-md-4 py-2">
             <div class="abin-top-content text-center mb-md-5 mb-4">
-                <h6 class="title-subw3hny">About Us</h6>
-                <h3 class="title-w3l mb-3">Our <span class="thin">Story</span></h3>
+                <h6 class="title-subhny">About Us</h6>
+                <h3 class="title-l mb-3">Our <span class="thin">Story</span></h3>
                 <p class="abinfo-para">Lorem ipsum dolor sit, amet consectetur elit. Earum mollitia cum ex ipsam autem!earum sequi amet.Earum mollitia cum ex ipsam autem!earum sequi amet.</p>
             </div>
             <div class="aboyt-ininf">
                 <div class="about-img">
                     <img src="assets/images/banner1.jpg" alt="" class="img-fluid radius-image">
                 </div>
-                    <div class="three-grids-hmew3 mt-5">
+                    <div class="three-grids-hme mt-5">
                         <div class="three-grid-1 text-left">
                            
                                <h4>Who We Are ?</h4>
@@ -133,14 +130,14 @@ Author URL: http://w3layouts.com
         </div>
     </section>
      <!--//about-inner-->
-     <!--/w3l-features-call3-->
-     <section class="w3l-features py-5" id="work">
-        <div class="call-w3 py-md-5 py-2">
+     <!--/l-features-call3-->
+     <section class="l-features py-5" id="work">
+        <div class="call- py-md-5 py-2">
             <div class="container">
                 <div class="row main-cont-wthree-2">
                     <div class="col-lg-6 feature-grid-left pl-lg-5">
-                        <h6 class="title-subw3hny">More Info</h6>
-                        <h3 class="title-w3l mb-md-4 mb-2">Who We <span class="thin">Work With</span></h3>
+                        <h6 class="title-subhny">More Info</h6>
+                        <h3 class="title-l mb-md-4 mb-2">Who We <span class="thin">Work With</span></h3>
                         <p class="text-para pr-lg-5">Curabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed,
                             lacinia est. Quisque ut lectus consequat, venenatis eros et, sed commodo risus. Nullam sit
                             amet laoreet elit. Suspendisse non init magnaa velit efficitur, dolor eget ex fermentum.
@@ -148,7 +145,7 @@ Author URL: http://w3layouts.com
                         <a href="#url" class="btn btn-primary btn-style mt-lg-5 mt-4">Discover More</a>
                     </div>
                     <div class="col-lg-6 feature-grid-right mt-lg-0 mt-5">
-                        <div class="call-grids-w3 d-grid">
+                        <div class="call-grids- d-grid">
                             <div class="grids-1 box-wrap">
                                 <div class="icon">
                                     <a href="#feature" class=""><img src="assets/images/flipkart.png" alt="" class="img-fluid"></a>
@@ -175,14 +172,14 @@ Author URL: http://w3layouts.com
             </div>
         </div>
     </section>
-    <!--//w3l-features-call3-->
+    <!--//l-features-call3-->
     <!--/video-->
-    <section class="w3l-about4 py-5" id="cover">
+    <section class="l-about4 py-5" id="cover">
 		<div class="container px-0 py-lg-5 py-md-4 py-2">
 			<div class="history-info position-relative">
 				<div class="heading mx-auto text-center">
-                    <h6 class="title-subw3hny text-center">Video</h6>
-					<h3 class="title-w3l">Make people fall in love with your clothes.</h3>
+                    <h6 class="title-subhny text-center">Video</h6>
+					<h3 class="title-l">Make people fall in love with your clothes.</h3>
 					<p class="mt-3 px-lg-5 mx-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit sunt in culpa qui officia
 						sed deserunt mollit anim id est laborum mollit anim id est nulla.</p>
 					<a href="#" class="popup-with-zoom-anim play-view text-center mt-4">
@@ -195,12 +192,12 @@ Author URL: http://w3layouts.com
 		</div>
 	</section>
     <!--//video-->
-    <section class="w3l-team py-5" id="team">
+    <section class="l-team py-5" id="team">
         <div class="container py-lg-5 py-md-4 py-2">
             <div class="row team-row">
                 <div class="col-lg-6 team-wrap-info pr-lg-5">
-                    <h6 class="title-subw3hny">Our Team</h6>
-                    <h3 class="title-w3l mb-md-4 mb-2">Meet the <span class="thin">Team </span></h3>
+                    <h6 class="title-subhny">Our Team</h6>
+                    <h3 class="title-l mb-md-4 mb-2">Meet the <span class="thin">Team </span></h3>
                     <p class="text-para pr-lg-5">Curabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed,
                         lacinia est. Quisque ut lectus consequat, venenatis eros et, sed commodo risus. Nullam sit
                         amet laoreet elit. Suspendisse non init magnaa velit efficitur, dolor eget ex fermentum.
@@ -259,7 +256,7 @@ Author URL: http://w3layouts.com
         </div>
     </section>
     <!--/Footer-->
-    <section class="w3l-footer-29-main">
+    <section class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-lg-4 py-sm-3">
                 <div class="row footer-top-29">
@@ -272,16 +269,16 @@ Author URL: http://w3layouts.com
                        <a href="contact.html" class="btn btn-style btn-primary mt-2">Contact Us</a>
                     </div>
                     <div class="col-lg-4 footer-list-29 footer-3 mt-lg-0 mt-5 pr-lg-5">
-                        <h6 class="footer-title-29">Quick <span class="thinw3">Links</span></h6>
-                        <div class="footer-listw3-grids">
-                            <ul class="footer-listw3">
+                        <h6 class="footer-title-29">Quick <span class="thin">Links</span></h6>
+                        <div class="footer-list-grids">
+                            <ul class="footer-list">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="blog.html">Blogs</a></li>
                                 <li><a href="contact.html">Contact</a></li>
 
                             </ul>
-                            <ul class="footer-listw3">
+                            <ul class="footer-list">
                                 <li><a href="#privacy">Privacy Policy</a></li>
                                 <li><a href="#term">Terms of use</a></li>
                                 <li><a href="#sales">Sales and Refunds</a></li>
@@ -291,7 +288,7 @@ Author URL: http://w3layouts.com
                     </div>
 
                     <div class="col-lg-4 col-md-6 footer-list-29 footer-4 mt-lg-0 mt-5">
-                        <h6 class="footer-title-29">Keep <span class="thinw3">Connected</span></h6>
+                        <h6 class="footer-title-29">Keep <span class="thin">Connected</span></h6>
                         <p>Get Updates By Subscribe Our Weekly Newsletter</p>
 
                         <form action="#" class="subscribe" method="post">
@@ -313,8 +310,8 @@ Author URL: http://w3layouts.com
         </div>
         <div class="bottom-copies text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved | Designed by <a
-                        href="https://w3layouts.com">VijayaSriKondiparthi-20X41A0595</a></p>
+                <p class="copy-footer-29">© 2022 PassionKraft.  All rights reserved Vijaya Sri 20X41A0595 | Developed for FRT project <a
+                       </a></p>
             </div>
         </div>
 
