--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,5 @@
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en">
 
@@ -10,7 +7,7 @@ Author URL: http://w3layouts.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | Contact :: W3layouts </title>
+    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | Contact :: </title>
     <!-- google fonts -->
     <link href="//fonts.googleapis.com/css2?family=Spartan:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Template CSS -->
@@ -84,7 +81,7 @@ Author URL: http://w3layouts.com
     <div class="section-mid-gap"></div>
     <!--/Banner-inner-pages-->
     <div class="inner-banner">
-        <section class="w3l-breadcrumb text-left">
+        <section class="l-breadcrumb text-left">
           <div class="container">
             <ul class="breadcrumbs-custom-path">
               <li><a href="index.html">Home</a></li>
@@ -95,13 +92,13 @@ Author URL: http://w3layouts.com
       </div>
     <!--//Banner-inner-pages-->
      <!--/contact1-->
-        <section class="w3l-contact-1 py-5" id="contact">
+        <section class="l-contact-1 py-5" id="contact">
             <div class="contacts-9 py-lg-5 py-md-4">
                 <div class="container">
                     <div class="row contact-view">
                         <div class="col-lg-6 cont-details mb-lg-0 mb-5 pr-lg-5">
-                            <h6 class="title-subw3hny">Get in touch</h6>
-                            <h3 class="title-w3l mb-4">Contact <span class="thin">Us</span></h3>
+                            <h6 class="title-subhny">Get in touch</h6>
+                            <h3 class="title-l mb-4">Contact <span class="thin">Us</span></h3>
                             <p class="mb-sm-5 mb-4">Start working with Us that can provide everything you need to generate awareness, drive traffic,
                                 connect. <br> We guarantee that you’ll be able to have any issue resolved within 24 hours.</p>
                             <div class="cont-top">
@@ -164,7 +161,7 @@ Author URL: http://w3layouts.com
         </div>
     <!--//contact-block -->
     <!--/Footer-->
-    <section class="w3l-footer-29-main">
+    <section class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-lg-4 py-sm-3">
                 <div class="row footer-top-29">
@@ -177,16 +174,16 @@ Author URL: http://w3layouts.com
                        <a href="contact.html" class="btn btn-style btn-primary mt-2">Contact Us</a>
                     </div>
                     <div class="col-lg-4 footer-list-29 footer-3 mt-lg-0 mt-5 pr-lg-5">
-                        <h6 class="footer-title-29">Quick <span class="thinw3">Links</span></h6>
-                        <div class="footer-listw3-grids">
-                            <ul class="footer-listw3">
+                        <h6 class="footer-title-29">Quick <span class="thin">Links</span></h6>
+                        <div class="footer-list-grids">
+                            <ul class="footer-list">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="blog.html">Blogs</a></li>
                                 <li><a href="contact.html">Contact</a></li>
 
                             </ul>
-                            <ul class="footer-listw3">
+                            <ul class="footer-list">
                                 <li><a href="#privacy">Privacy Policy</a></li>
                                 <li><a href="#term">Terms of use</a></li>
                                 <li><a href="#sales">Sales and Refunds</a></li>
@@ -196,7 +193,7 @@ Author URL: http://w3layouts.com
                     </div>
 
                     <div class="col-lg-4 col-md-6 footer-list-29 footer-4 mt-lg-0 mt-5">
-                        <h6 class="footer-title-29">Keep <span class="thinw3">Connected</span></h6>
+                        <h6 class="footer-title-29">Keep <span class="thin">Connected</span></h6>
                         <p>Get Updates By Subscribe Our Weekly Newsletter</p>
 
                         <form action="#" class="subscribe" method="post">
@@ -218,8 +215,8 @@ Author URL: http://w3layouts.com
         </div>
         <div class="bottom-copies text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved | Designed by <a
-                        href="https://w3layouts.com">VijayaSriKondiparthi-20X41A0595</a></p>
+                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved Vijaya Sri 20X41A0595 | Developed for FRT project<a
+                        </a></p>
             </div>
         </div>
 
