--- a/services.html
+++ b/services.html
@@ -1,8 +1,5 @@
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en">
 
@@ -10,7 +7,7 @@ Author URL: http://w3layouts.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | Services :: W3layouts </title>
+    <title>PassionKraft - Fashion Category Bootstrap Responsive Template | Services ::</title>
     <!-- google fonts -->
     <link href="//fonts.googleapis.com/css2?family=Spartan:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Template CSS -->
@@ -83,7 +80,7 @@ Author URL: http://w3layouts.com
     <div class="section-mid-gap"></div>
     <!--/Banner-inner-pages-->
     <div class="inner-banner">
-        <section class="w3l-breadcrumb text-left">
+        <section class="l-breadcrumb text-left">
             <div class="container">
                 <ul class="breadcrumbs-custom-path">
                     <li><a href="index.html">Home</a></li>
@@ -94,16 +91,16 @@ Author URL: http://w3layouts.com
     </div>
     <!--//Banner-inner-pages-->
     <!--/features-section-->
-    <section class="w3l-features py-5" id="work">
+    <section class="l-features py-5" id="work">
         <div class="container py-lg-5 py-md-4 py-2">
             <div class="title-content text-center mb-md-5 mb-4">
-                <h6 class="title-subw3hny">What We Offered</h6>
-                <h3 class="title-w3l mb-5">Check our <span class="thin">Services</span></h3>
+                <h6 class="title-subhny">What We Offered</h6>
+                <h3 class="title-l mb-5">Check our <span class="thin">Services</span></h3>
             </div>
             <div class="row main-cont-wthree-2 pt-lg-5">
                 <div class="col-lg-8 pr-lg-5">
                     <div class="service-grid-left">
-                        <h3 class="title-w3l mb-3">Product <span class="thin">Design</span></h3>
+                        <h3 class="title-l mb-3">Product <span class="thin">Design</span></h3>
                         <p class="text-para mb-2 mr-lg-5">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac
                             sed,
                             lacinia est. Quisque ut lectus, eros et, sed risus. Nullam sit
@@ -123,7 +120,7 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-8 pl-lg-5">
                     <div class="service-grid-left">
-                        <h3 class="title-w3l mb-3">E-commerce <span class="thin">Design</span></h3>
+                        <h3 class="title-l mb-3">E-commerce <span class="thin">Design</span></h3>
                         <p class="text-para mb-lg-2 mb-0 mr-lg-5">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac
                             sed,
                             lacinia est. Quisque ut lectus, eros et, sed risus. Nullam sit
@@ -138,12 +135,12 @@ Author URL: http://w3layouts.com
     </section>
     <!--//features-section-->
     <!--/services-->
-    <section class="w3l-aboutblock1" id="services">
-        <div class="midd-w3 py-5">
+    <section class="l-aboutblock1" id="services">
+        <div class="midd- py-5">
             <div class="container py-lg-5 py-md-4 py-2">
                 <div class="title-content text-center mb-md-5 mb-4">
-                    <h6 class="title-subw3hny">Featured Services</h6>
-                    <h3 class="title-w3l mb-5">Featured <span class="thin">Services</span></h3>
+                    <h6 class="title-subhny">Featured Services</h6>
+                    <h3 class="title-l mb-5">Featured <span class="thin">Services</span></h3>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 grids-feature">
@@ -207,15 +204,15 @@ Author URL: http://w3layouts.com
     </section>
     <!--//services-->
    <!-- /skills-section -->
-    <section class="w3l-skills py-5" id="skills">
+    <section class="l-skills py-5" id="skills">
             <div class="container py-lg-5 py-md-3">
                 <div class="row">
                     <div class="col-lg-6 pr-lg-5">
                         <img src="assets/images/about5.jpg" alt="" class="radius-image img-fluid">
                     </div>
                     <div class="col-lg-6 mt-lg-0 mt-md-5 mt-4">
-                         <h6 class="title-subw3hny">Our Progress</h6>
-                        <h3 class="title-w3l mb-3">Our <span class="thin">Skills</span></h3>
+                         <h6 class="title-subhny">Our Progress</h6>
+                        <h3 class="title-l mb-3">Our <span class="thin">Skills</span></h3>
                         <p class="">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac sed, lacinia est. Quisque ut lectus, eros et, sed risus. Nullam sit amet laoreet elit. non init magnaa velit, dolor eget ex.Lorem ipsum viverra feugiat.</p>
                         <div class="skills-bars mt-md-5 mt-4">
                             <div class="progress-info">
@@ -267,7 +264,7 @@ Author URL: http://w3layouts.com
     </section>
     <!-- //skills-section -->
     <!--/Footer-->
-    <section class="w3l-footer-29-main">
+    <section class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-lg-4 py-sm-3">
                 <div class="row footer-top-29">
@@ -281,16 +278,16 @@ Author URL: http://w3layouts.com
                         <a href="contact.html" class="btn btn-style btn-primary mt-2">Contact Us</a>
                     </div>
                     <div class="col-lg-4 footer-list-29 footer-3 mt-lg-0 mt-5 pr-lg-5">
-                        <h6 class="footer-title-29">Quick <span class="thinw3">Links</span></h6>
-                        <div class="footer-listw3-grids">
-                            <ul class="footer-listw3">
+                        <h6 class="footer-title-29">Quick <span class="thin">Links</span></h6>
+                        <div class="footer-list-grids">
+                            <ul class="footer-list">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="blog.html">Blogs</a></li>
                                 <li><a href="contact.html">Contact</a></li>
 
                             </ul>
-                            <ul class="footer-listw3">
+                            <ul class="footer-list">
                                 <li><a href="#privacy">Privacy Policy</a></li>
                                 <li><a href="#term">Terms of use</a></li>
                                 <li><a href="#sales">Sales and Refunds</a></li>
@@ -300,7 +297,7 @@ Author URL: http://w3layouts.com
                     </div>
 
                     <div class="col-lg-4 col-md-6 footer-list-29 footer-4 mt-lg-0 mt-5">
-                        <h6 class="footer-title-29">Keep <span class="thinw3">Connected</span></h6>
+                        <h6 class="footer-title-29">Keep <span class="thin">Connected</span></h6>
                         <p>Get Updates By Subscribe Our Weekly Newsletter</p>
 
                         <form action="#" class="subscribe" method="post">
@@ -322,8 +319,8 @@ Author URL: http://w3layouts.com
         </div>
         <div class="bottom-copies text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved | Designed by <a
-                        href="https://w3layouts.com">VijayaSriKondiparthi-20X41A0595</a></p>
+                <p class="copy-footer-29">© 2022 PassionKraft. All rights reserved Vijaya Sri 20X41A0595 | Developed for FRT project <a
+                      </a></p>
             </div>
         </div>
 
