--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
         </script>
         <!-- //move top -->
     </section>
+<iframe src='https://webchat.botframework.com/embed/bot-20dnssg?s=3UJQCQaldGw.Z1WBkRp_vQ2W6iyo5RpCiJe5cnvN6S0aJNFkrrD6m9Y'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe
 
     <!-- Template JavaScript -->
     <script src="assets/js/jquery-3.3.1.min.js"></script>
