--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 						  <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact US</a>
                         </li>
+			  			  <li class="nav-item">
+                            <a class="nav-link" href="Bot.html">Bot</a>
+                        </li>
                     </ul>
                     <!--/search-right-->
                     <div class="search-right">
